--- a/fixture/community170x/core/Mage/SystemConfiguration/data/PaymentMethod.yml
+++ b/fixture/community170x/core/Mage/SystemConfiguration/data/PaymentMethod.yml
@@ -36,11 +36,11 @@ express_checkout_all_us:
             fieldset_1:
                 path: pec_required_settings/pec_ec_required_settings
                 data: &ec_required_settings
-                    pec_ec_merchant_email_account: test@example.com
-                    pec_ec_api_authentication_method: API Signature
-                    pec_ec_api_username: test
-                    pec_ec_api_password: test
-                    pec_ec_api_signature: test
+                    pec_ec_email_associated_with_paypal_merchant_account: test@example.com
+                    pec_api_authentication_methods: API Signature
+                    pec_api_username: test
+                    pec_api_password: test
+                    pec_api_signature: test
                     pec_ec_sandbox_mode: Yes
                     pec_ec_use_proxy: Yes #No
                     pec_ec_proxy_host: test
@@ -129,11 +129,11 @@ paypal_all_in_one_us_ppa:
             fieldset_2:
                 path: ppa_required_settings/ppa_ec_required_settings
                 data:
-                    ppa_ec_merchant_email_account: test@example.com
-                    ppa_ec_api_authentication_method: API Signature
-                    ppa_ec_api_username: test
-                    ppa_ec_api_password: test
-                    ppa_ec_api_signature: test
+                    ppa_ec_email_associated_with_paypal_merchant_account: test@example.com
+                    ppa_api_authentication_methods: API Signature
+                    ppa_api_username: test
+                    ppa_api_password: test
+                    ppa_api_signature: test
                     ppa_ec_sandbox_mode: Yes
                     ppa_ec_use_proxy: Yes #No
                     ppa_ec_proxy_host: test
@@ -230,11 +230,11 @@ paypal_all_in_one_us_ppp:
                 path: ppp_required_settings/ppp_pp_required_settings
                 data:
                     ppp_pp_use_payment_bridge: Yes
-                    ppp_ec_merchant_email_account: test@example.com
-                    ppp_ec_api_authentication_method: API Signature
-                    ppp_ec_api_username: test
-                    ppp_ec_api_password: test
-                    ppp_ec_api_signature: test
+                    ppp_ec_email_associated_with_paypal_merchant_account: test@example.com
+                    ppp_api_authentication_methods: API Signature
+                    ppp_api_username: test
+                    ppp_api_password: test
+                    ppp_api_signature: test
                     ppp_ec_sandbox_mode: Yes
                     ppp_ec_use_proxy: Yes #No
                     ppp_ec_proxy_host: test
@@ -370,11 +370,11 @@ paypal_payment_gateways_us_pfl:
             fieldset_2:
                 path: pfl_required_settings/pfl_ec_required_settings
                 data:
-                    pfl_ec_merchant_email_account: test_pfl@example.com
-                    pfl_ec_api_authentication_method: API Signature
-                    pfl_ec_api_username: api_username_pfl_ec
-                    pfl_ec_api_password: api_password_pfl_ec
-                    pfl_ec_api_signature: api_signature_pfl_ec
+                    pfl_ec_email_associated_with_paypal_merchant_account: test_pfl@example.com
+                    pfl_api_authentication_methods: API Signature
+                    pfl_api_username: api_username_pfl_ec
+                    pfl_api_password: api_password_pfl_ec
+                    pfl_api_signature: api_signature_pfl_ec
                     pfl_ec_sandbox_mode: Yes
                     pfl_ec_use_proxy: Yes #No
                     pfl_ec_proxy_host: test_pfl
@@ -460,7 +460,7 @@ paypal_payment_gateways_us_pfl:
                     pfl_ba_transfer_cart_line_items: No
                     pfl_ba_allow_in_agreement_wizard: Yes
 
-paypal_payment_gateways_us_pfl:
+paypal_payment_gateways_us_pfp:
     configuration_scope: Default Config
     merchant_country: United States
     configuration:
@@ -471,7 +471,7 @@ paypal_payment_gateways_us_pfl:
                 path: pfp_required_settings/pfp_fp_required_settings
                 data:
                     pfp_fp_use_payment_bridge: No
-                    pfp_fp_merchant_email_account: test@example.com
+                    pfp_fp_email_associated_with_paypal_merchant_account: test@example.com
                     pfp_fp_partner: pfp_fp_partner
                     pfp_fp_vendor: pfp_fp_vendor
                     pfp_fp_user: pfp_fp_user
@@ -541,3 +541,160 @@ paypal_payment_gateways_us_pfl:
                     pfp_ec_enable_ssl_verification: Yes
                     pfp_ec_transfer_cart_line_items: Yes
 ################ Test dataset examples(Should be deleted) End
+
+#<-------------PayPal Direct Payment Payflow Edition------------------------>
+payflowpro_without_3Dsecure:
+    configuration_scope: Default Config
+    merchant_country: United States
+    configuration:
+        payment_1:
+            payment_name: pfp
+            general_fieldset: paypal_payment_gateways
+            fieldset_1: &pfp_fp_required_settings
+                path: pfp_required_settings/pfp_fp_required_settings
+                data:
+                    fp_use_payment_bridge: No
+                    fp_email_associated_with_paypal_merchant_account:
+                    fp_partner: PayPal
+                    fp_vendor: petervarienpayflowpro
+                    fp_user: petervarienpayflowpro
+                    fp_password: paypal123456
+                    fp_test_mode: Yes
+                    fp_use_proxy: No
+            fieldset_2: &pfp_required_settings
+                path: pfp_required_settings
+                data:
+                    enable: Yes
+            fieldset_3: &pfp_fp_basic_settings
+                path: pfp_fp_basic_settings
+                data:
+                    fp_title: Payflow Pro
+                    fp_payment_action: Authorization
+                    fp_allowed_credit_card: all
+            fieldset_4: &pfp_fp_basic_settings_advanced
+                path: pfp_fp_basic_settings/pfp_fp_basic_settings_advanced
+                data:
+                    fp_payment_applicable_from: All Allowed Countries
+                    fp_debug_mode: Yes
+                    fp_enable_ssl_verification: Yes
+                    fp_require_cvv_entry: Yes
+                    fp_3d_secure_validation: No
+            fieldset_5: &pfp_ec_basic_settings
+                path: pfp_ec_basic_settings
+                data:
+                    ec_title: PayPal Express Checkout Payflow Edition
+                    ec_payment_action: Authorization
+                    ec_shortcut_on_cart: Yes
+                    ec_shortcut_on_product: Yes
+            fieldset_6: &pfp_ec_basic_settings_advanced
+                path: pfp_ec_basic_settings/pfp_ec_basic_settings_advanced
+                data:
+                    ec_payment_applicable_from: All Allowed Countries
+                    ec_debug_mode: Yes
+                    ec_enable_ssl_verification: Yes
+                    ec_transfer_cart_line_items: Yes
+
+payflowpro_with_3Dsecure:
+    configuration_scope: Default Config
+    merchant_country: United States
+    configuration:
+        payment_1:
+            payment_name: pfp
+            general_fieldset: paypal_payment_gateways
+            fieldset_1: *pfp_fp_required_settings
+            fieldset_2: *pfp_required_settings
+            fieldset_3: *pfp_fp_basic_settings
+            fieldset_4:
+                path: pfp_fp_basic_settings/pfp_fp_basic_settings_advanced
+                data:
+                    fp_payment_applicable_from: All Allowed Countries
+                    fp_debug_mode: Yes
+                    fp_enable_ssl_verification: Yes
+                    fp_require_cvv_entry: Yes
+                    fp_3d_secure_validation: Yes
+                    fp_severe_3d_secure_validation: No
+                    fp_advanced_centinel_api_url: https://centineltest.cardinalcommerce.com/maps/txns.asp
+            fieldset_5: *pfp_ec_basic_settings
+            fieldset_6: *pfp_ec_basic_settings_advanced
+
+#<-------------PayPal Direct Payment------------------------>
+paypaldirect_without_3Dsecure:
+    configuration_scope: Default Config
+    merchant_country: United States
+    configuration:
+        payment_1:
+            payment_name: ppp
+            general_fieldset: paypal_all_in_one
+            fieldset_1: &ppp_pp_required_settings
+                path: ppp_required_settings/ppp_pp_required_settings
+                data:
+                    pp_use_payment_bridge: No
+                    email_associated_with_paypal_merchant_account:
+                    api_authentication_methods: API Signature
+                    api_username:
+                    api_password:
+                    api_signature:
+                    ec_sandbox_mode: Yes
+                    ec_use_proxy: No
+            fieldset_2: &ppp_required_settings
+                path: ppp_required_settings
+                data:
+                    enable: Yes
+            fieldset_3: &ppp_pp_basic_settings
+                path: ppp_pp_basic_settings
+                data:
+                    pp_title: PayPal Direct Payment
+                    pp_payment_action: Authorization
+                    pp_allowed_credit_card: all
+            fieldset_4: &ppp_pp_basic_settings_advanced
+                path: ppp_pp_basic_settings/ppp_pp_basic_settings_advanced
+                data:
+                    pp_payment_applicable_from: All Allowed Countries
+                    pp_debug_mode: Yes
+                    pp_enable_ssl_verification: Yes
+                    pp_transfer_cart_line_items: No
+                    pp_require_cvv_entry: Yes
+                    pp_3d_secure_validation: No
+            fieldset_5: &ppp_ec_basic_settings
+                path: ppp_ec_basic_settings
+                data:
+                    ec_title: PayPal Express Checkout
+                    ec_payment_action: Authorization
+                    ec_shortcut_on_cart: Yes
+                    ec_shortcut_on_product: Yes
+            fieldset_6: &ppp_ec_basic_settings_advanced
+                path: ppp_ec_basic_settings/ppp_ec_basic_settings_advanced
+                data:
+                    ec_payment_applicable_from: All Allowed Countries
+                    ec_debug_mode: Yes
+                    ec_enable_ssl_verification: Yes
+                    ec_transfer_cart_line_items: Yes
+                    ec_transfer_shipping_options: No
+                    ec_shortcut_buttons_flavor: Dynamic
+                    ec_enable_guest_checkout: No
+                    ec_require_customer_billing_address: No
+                    ec_billing_agreement_signup: Never
+
+paypaldirect_with_3Dsecure:
+    configuration_scope: Default Config
+    merchant_country: United States
+    configuration:
+        payment_1:
+            payment_name: ppp
+            general_fieldset: paypal_all_in_one
+            fieldset_1: *ppp_pp_required_settings
+            fieldset_2: *ppp_required_settings
+            fieldset_3: *ppp_pp_basic_settings
+            fieldset_4:
+                path: ppp_pp_basic_settings/ppp_pp_basic_settings_advanced
+                data:
+                    pp_payment_applicable_from: All Allowed Countries
+                    pp_debug_mode: Yes
+                    pp_enable_ssl_verification: Yes
+                    pp_transfer_cart_line_items: No
+                    pp_require_cvv_entry: Yes
+                    pp_3d_secure_validation: Yes
+                    pp_severe_3d_secure_validation: Yes
+                    pp_advanced_centinel_api_url: https://centineltest.cardinalcommerce.com/maps/txns.asp
+            fieldset_5: *ppp_ec_basic_settings
+            fieldset_6: *ppp_ec_basic_settings_advanced
