MAGETWO-1330 "After Commit Callback" in Integration Tests - implemented "transparent transactions" for integration tests - removed "afterCommitCallback" workarounds across the board - fixed fatal error in one of the modules caused by triggering   "after commit callbacks", so the tests started actually covering   more code

--- a/dev/tests/integration/etc/local-oracle.xml.dist
+++ b/dev/tests/integration/etc/local-oracle.xml.dist
@@ -39,6 +39,15 @@
             </default_setup>
         </resources>
         <session_save><![CDATA[files]]></session_save>
+        <resource>
+            <connection>
+                <types>
+                    <oracle>
+                        <adapter><![CDATA[Magento_Test_Db_Adapter_Oracle]]></adapter>
+                    </oracle>
+                </types>
+            </connection>
+        </resource>
     </global>
     <admin>
         <routers>
