--- a/fixture/community2/core/Mage/ImportExport/uimap/admin/ImportExport.yml
+++ b/fixture/community2/core/Mage/ImportExport/uimap/admin/ImportExport.yml
@@ -76,10 +76,14 @@ export:
                             file_format: //select[@id='file_format']
                 -
                     export_format:
-                        xpath: //div[@id="export_format_version"]
+                        xpath: //div[@id="export_format_version_fieldset"]
                         dropdowns:
                             export_file_version: //select[@id='file_format_version']
-                            export_file: //@TBD custmer , customer address
+                -
+                    customer_entity_type:
+                        xpath: //div[@id="customer_entity_fieldset"]
+                        dropdowns:
+                            export_file_type: //select[@id='customer_entity']
                 -
                     grid_and_filter:
                         xpath: //div[@id='export_filter_grid_container']
