--- a/config/config.yml
+++ b/config/config.yml
@@ -109,8 +109,8 @@ applications:
                 url: 'https://developer.paypal.com/'
                 base_page_uimap: 'paypal_developer_home'
                 uimap_path: 'paypal_developer'
-                login: 'ashugayev@ebay.com'
-                password: 'magento123'
+                login: 'paypal_developer_login'
+                password: 'paypal_developer_password'
     enterprise: &enterprise
         fallbackOrderFixture: 'enterprise, default'
         fallbackOrderHelper: 'Enterprise, Core'
@@ -165,18 +165,36 @@ applications:
                 password: ''
             paypal_sandbox: *paypalSandbox
             paypal_developer: *paypalDeveloper
-    community170x: &community170x
-        fallbackOrderFixture: 'community170x, default'
-        fallbackOrderHelper: 'Community170x, Core'
+    community1701: &ce1701
+        fallbackOrderFixture: 'community1701, default'
+        fallbackOrderHelper: 'community1701, Core'
         areas:
             admin:
-                url: 'http://www.localhost.com/magento_community170x/control/'
+                url: 'http://www.localhost.com/magento_community1701/control/'
                 base_page_uimap: 'log_in_to_admin'
                 uimap_path: 'admin'
                 login: 'admin'
                 password: '123123q'
             frontend:
-                url: 'http://www.localhost.com/magento_community170x/'
+                url: 'http://www.localhost.com/magento_community1701/'
+                base_page_uimap: 'home_page'
+                uimap_path: 'frontend'
+                login: ''
+                password: ''
+            paypal_sandbox: *paypalSandbox
+            paypal_developer: *paypalDeveloper
+    enterprise1201: &ee1201
+        fallbackOrderFixture: 'community1701, enterprise, default'
+        fallbackOrderHelper: 'Community1701, Enterprise, Core'
+        areas:
+            admin:
+                url: 'http://www.localhost.com/magento_enterprise1201/control/'
+                base_page_uimap: 'log_in_to_admin'
+                uimap_path: 'admin'
+                login: 'admin'
+                password: '123123q'
+            frontend:
+                url: 'http://www.localhost.com/magento_enterprise1201/control/'
                 base_page_uimap: 'home_page'
                 uimap_path: 'frontend'
                 login: ''
