--- a/fixture/community2/core/Mage/ImportExport/data/ImportExport.yml
+++ b/fixture/community2/core/Mage/ImportExport/data/ImportExport.yml
@@ -56,8 +56,8 @@ generic_customer_attribute:
    input_filter: None
    used_for_customer_segment: No
    visible_on_frontend: Yes
-   sort_order 1
+   sort_order: 1
    used_in_forms: Customer Account Edit, Customer Registration
-   admin_title': Text_Field_Admin_%randomize%
+   admin_title: Text_Field_Admin_%randomize%
    store_view_titles:
         Default Store View: Text_Field_StoreView
